created some more statistics data
